# robotics-code

./: .gitignore  CMakeLists.txt  README.md  build.bat  qnxToolchain.cmake  setup.m  test.slx  test_RT.slx  test_compare.slx  xo_test.slx
.devcontainer/: devcontainer.json
include/: kinematics.h  transform.h  utils.h
resources/project/-TImuIDuvJDkM53k2-8nNIpARPw/: 3efr8bKdDWyRV9UctbMCep5bErMp.xml  7TypFpR-pRvgeLOBugyuR9WY2eIp.xml  GEssuhmUckEyofwZT3pkQYBntrsp.xml  RQ5hF1eQz580g034_wFQR4irfXUp.xml  XoRIE_86cL8AKHdXKl8H-k4C9SUp.xml  rrf28MRwjx5fRM00RL9_r6RhT3Mp.xml  y6PtaPgc0LV1d-rKAqpQ2O7BqsIp.xml
resources/project/3t6ep3eVFCUnOZ5Lx6Jzv6EoODQ/: 65EDfkg5Oiam0G3041LPXne2fqop.xml  vdKS5oHcycIvMLeCbZQSCPdSJv0p.xml
resources/project/6KI4kJxpFloUCIQtsJP1dYJckhk/: Q8cLherm6HQiRg-bUdK9OOMD3Hsp.xml
resources/project/93HB85Q4NkWBSgVwjDLGmcPtCA8/: Ydb3w1S8V0_BMeeoBd3q-t31v58p.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: F8DHWC1aIjZWwMwZAuNgBJ203xMp.xml  HKTtylpT_wdOuXmhgsvj8MVVkAkp.xml  gtDlhBQedFzDJ94GiUZ4-OHBMgkd.xml  gtDlhBQedFzDJ94GiUZ4-OHBMgkp.xml
resources/project/Id94ECcZUOH4w03PmHjI5iuvDik/: DOUo99yw7PRENcQEPXg7N-hudBQp.xml  JxfeMQpMDKAYSBZJ88cYYQ7mrycp.xml  _336yWn5QVQEgOnsuFjyHQIsyVcp.xml  aSA0LnofzkS4PzBvlOJ289X19GQp.xml  egA6ylCrXPkhwBoRrM3hNQAvFp4p.xml  k09GoYlWcDSpQE8AQHmJm9Fx7Fwp.xml
resources/project/JxfeMQpMDKAYSBZJ88cYYQ7mryc/: 4qr1SF2kcU-TpkVtPwVxetyt5F0p.xml  QBqRZjR112rsLgeYuJsP1AucnI4p.xml  SaH5QVnaw7DXVziOSjIvG5TA6lcp.xml  (+7 more)
src/: kinematics.cpp  main.cpp  transform.cpp  utils.cpp
urdf/: XT_PRU_noHands.urdf  alpha4_LC_FB_XYZ.urdf
(+21 files in other folders)
